--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,37 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+      <h1>About Us</h1>
+       Welcome to Best Cars dealership, a premier automotive destination with branches spinning across the United States. Committed to excellence, we pride ourselves on providing top tier customer service, a vast selection of quality vehicles, and an unwavering dedication to meeting the diverse automotive needs of our valued customers nationwide. At each of our locations, our team is driven by a passion for delivering experiences, making us your trusted partner on the need for automotive satisfaction.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/john_wilton.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">CEO</p>
+          <p>John Wilton</p>
+          <p class="card-text">John steers the business towards success with strategic leaderships, cultivating a customer centric environment for automotive excellence.</p>
+          <p>jwilton@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/emma_coot.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">CMO</p>
+          <p>Emma Coot</p>
+          <p class="card-text">Emma ochestrates innovative marketing campaigns, driving brand visibility and consumer engagement, shaping the company's narrative in the competitive landscape.</p>
+          <p>ecoot@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/ensei_uchida.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">CFO</p>
+          <p>Ensei Uchida</p>
+          <p class="card-text">Ensei oversees the financial health of the company, leveraging astute financial strategies to optimize resources and ensure fiscal responsibility for sustained growth.</p>
+          <p>euchida@bestcars.com</p>
         </div>
       </div>
     </div>
